--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <h1>Tip Calculator</h1>
     <p>What is the bill total?</p>
 
-    <div class="bill">
+    <div>
         <label>$</label>
-        <input type="number">
+        <input type="number" class="bill">
     </div>
 
     <label>Tip Percentage</label>
     <select class="tip_percentage">
+        <option disabled selected value> -- select an option -- </option>
         <option value="0">0%</option>
         <option value=".5">5%</option>
         <option value=".1">10%</option>
