--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <option value=".35">35%</option>
         </select>
 
-        <button>Calculate!</button>
+        <button class="button">Calculate!</button>
 
         <div class="total"></div>
     </div>
